Change ArrayLists, used as Queues to ArrayDeques and LinkedLists
removing the first element is linear in an ArrayList